--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@types/express": "^4.0.35",
     "@types/joi": "^10.3.0",
     "@types/log4js": "0.0.32",
-    "@types/ramda": "0.0.7",
     "@types/uuid": "^2.0.29",
+    "@types/ramda": "github:types/npm-ramda",
     "@types/node": "^7.0.13"
   },
   "dependencies": {
