--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/app.js",
   "scripts": {
     "app": "node dist/app.js",
-    "build": "node_modules/.bin/gulp build"
+    "build": "gulp build",
+    "test": "mocha src/test --recursive --compilers ts:ts-node/register --bail",
+    "cover": "nyc npm t"
   },
   "keywords": [
     "api",
@@ -16,12 +18,22 @@
   "author": "Diego Fernández Barrera",
   "license": "AGPL-3.0",
   "devDependencies": {
+    "@types/chai": "^3.5.1",
     "@types/express": "^4.0.35",
     "@types/joi": "^10.3.0",
     "@types/log4js": "0.0.32",
-    "@types/uuid": "^2.0.29",
+    "@types/mocha": "^2.2.41",
+    "@types/node": "^7.0.13",
     "@types/ramda": "github:types/npm-ramda",
-    "@types/node": "^7.0.13"
+    "@types/sinon": "^2.1.3",
+    "@types/uuid": "^2.0.29",
+    "chai": "^3.5.0",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.3.0",
+    "mocha-typescript": "~1.0.0",
+    "nyc": "^10.2.0",
+    "sinon": "^2.1.0",
+    "ts-node": "^3.0.2"
   },
   "dependencies": {
     "base64-url": "^1.3.3",
@@ -36,5 +48,25 @@
     "swagger-express-mw": "^0.1.0",
     "typescript": "^2.2.2",
     "uuid": "^3.0.1"
+  },
+  "nyc": {
+    "include": [
+      "src/api/**/*.ts"
+    ],
+    "exclude": [
+      "src/test"
+    ],
+    "extension": [
+      ".ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "json",
+      "html"
+    ],
+    "all": true
   }
 }
