--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "app": "node dist/app.js",
     "build": "gulp build",
+    "watch": "gulp watch",
     "test": "mocha src/test --recursive --compilers ts:ts-node/register --bail",
+    "docs": "spectacle api.yaml -t docs",
     "cover": "nyc npm t"
   },
   "keywords": [
@@ -33,6 +35,7 @@
     "mocha-typescript": "~1.0.0",
     "nyc": "^10.2.0",
     "sinon": "^2.1.0",
+    "spectacle-docs": "^0.8.2",
     "ts-node": "^3.0.2"
   },
   "dependencies": {
