--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "watch": "gulp watch",
     "test": "mocha src/test --recursive --compilers ts:ts-node/register --bail",
     "docs": "spectacle api.yaml -t docs",
-    "cover": "nyc npm t"
+    "coverage": "nyc npm test",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "keywords": [
     "api",
@@ -30,6 +31,7 @@
     "@types/sinon": "^2.1.3",
     "@types/uuid": "^2.0.29",
     "chai": "^3.5.0",
+    "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
     "mocha": "^3.3.0",
     "mocha-typescript": "~1.0.0",
