--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "^7.0.13",
     "@types/ramda": "github:types/npm-ramda",
     "@types/sinon": "^2.1.3",
+    "@types/swagger-express-mw": "^0.7.0",
     "@types/uuid": "^2.0.29",
     "chai": "^3.5.0",
     "coveralls": "^2.13.1",
@@ -47,10 +48,12 @@
     "gulp-typescript": "^3.1.6",
     "joi": "^10.4.1",
     "log4js": "^1.1.1",
+    "mysql": "^2.13.0",
     "node-rsa": "^0.4.2",
     "ramda": "^0.23.0",
     "ramda-fantasy": "^0.8.0",
     "swagger-express-mw": "^0.1.0",
+    "typeorm": "0.0.11",
     "typescript": "^2.2.2",
     "uuid": "^3.0.1"
   },
