--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@types/sinon": "^2.1.3",
     "@types/swagger-express-mw": "^0.7.0",
     "@types/uuid": "^2.0.29",
+    "@types/chai-as-promised": "0.0.30",
+    "chai-as-promised": "^6.0.0",
     "chai": "^3.5.0",
     "coveralls": "^2.13.1",
     "istanbul": "^0.4.5",
